--- a/TestingApp/Views/Shared/_Layout.cshtml
+++ b/TestingApp/Views/Shared/_Layout.cshtml
@@ -32,141 +32,37 @@
 
 <body>
     <div id="app">
-        <div class="main-wrapper main-wrapper-1">
-            <div class="navbar-bg"></div>
-            <nav class="navbar navbar-expand-lg main-navbar">
-                <form class="form-inline mr-auto">
-                    <ul class="navbar-nav mr-3">
-                        <li><a href="#" data-toggle="sidebar" class="nav-link nav-link-lg"><i class="fas fa-bars"></i></a></li>
-                        <li><a href="#" data-toggle="search" class="nav-link nav-link-lg d-sm-none"><i class="fas fa-search"></i></a></li>
-                    </ul>
-                </form>
+        @if (Session["Name"] != null)
+        {
+            <div class="main-wrapper main-wrapper-1">
+                <div class="navbar-bg"></div>
+                @* Html Partial _Navbar akan merender sebuah code HTML berupa navbar *@
+                @Html.Partial("_NavBar")
 
-                <ul class="navbar-nav navbar-right">
-                    <li class="dropdown">
-                        <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg nav-link-user">
-                            <img alt="image" src="~/Assets/img/Avatar/avatar-1.png" class="rounded-circle mr-1">
-                            <div class="d-sm-none d-lg-inline-block">Hi, Ujang Maman</div>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right">
-                            <div class="dropdown-title">Logged in 5 min ago</div>
-                            <a href="features-profile.html" class="dropdown-item has-icon">
-                                <i class="far fa-user"></i> Profile
-                            </a>
-                            <a href="features-activities.html" class="dropdown-item has-icon">
-                                <i class="fas fa-bolt"></i> Activities
-                            </a>
-                            <a href="features-settings.html" class="dropdown-item has-icon">
-                                <i class="fas fa-cog"></i> Settings
-                            </a>
-                            <div class="dropdown-divider"></div>
-                            <a href="#" class="dropdown-item has-icon text-danger">
-                                <i class="fas fa-sign-out-alt"></i> Logout
-                            </a>
+                @{ 
+                    Html.RenderPartial("_SideBar");
+                }
+
+                <!-- Main Content -->
+                <div class="main-content">
+                    <section class="section">
+                        <div class="section-header">
+                            <h1>@ViewBag.Title</h1>
                         </div>
-                    </li>
-                </ul>
-            </nav>
+                        @if (Request.Url.AbsolutePath == "/Home/Index")
+                        {
+                            Html.RenderPartial("_CardDashboard");
+                        }
 
-            <div class="main-sidebar sidebar-style-2">
-                <aside id="sidebar-wrapper">
-                    <div class="sidebar-brand">
-                        <a href="index.html">Stisla</a>
-                    </div>
-                    <div class="sidebar-brand sidebar-brand-sm">
-                        <a href="index.html">St</a>
-                    </div>
-                    <ul class="sidebar-menu">
-                        <li class="menu-header">Dashboard</li>
-                        <li><a class="nav-link" href="@Url.Action("Index", "Home")"><i class="far fa-square"></i> <span>Dashboard</span></a></li>
-
-                        <li class="dropdown">
-                            <a href="#" class="nav-link has-dropdown"><i class="far fa-file-alt"></i> <span>Master Data</span></a>
-                            <ul class="dropdown-menu">
-                                <li><a class="nav-link" href="@Url.Action("Index", "Jurusan")">Jurusan</a></li>
-                                <li><a class="nav-link" href="@Url.Action("Index", "Student")">Mahasiswa</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </aside>
+                        @RenderBody()
+                    </section>
+                </div>
             </div>
-
-            <!-- Main Content -->
-            <div class="main-content">
-                <section class="section">
-                    <div class="section-header">
-                        <h1>@ViewBag.Title</h1>
-                    </div>
-                    @if (Request.Url.AbsolutePath == "/")
-                    {
-                        <div class="row">
-                            <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-                                <div class="card card-statistic-1">
-                                    <div class="card-icon bg-primary">
-                                        <i class="far fa-user"></i>
-                                    </div>
-                                    <div class="card-wrap">
-                                        <div class="card-header">
-                                            <h4>Total Admin</h4>
-                                        </div>
-                                        <div class="card-body">
-                                            10
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-                                <div class="card card-statistic-1">
-                                    <div class="card-icon bg-danger">
-                                        <i class="far fa-newspaper"></i>
-                                    </div>
-                                    <div class="card-wrap">
-                                        <div class="card-header">
-                                            <h4>News</h4>
-                                        </div>
-                                        <div class="card-body">
-                                            42
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-                                <div class="card card-statistic-1">
-                                    <div class="card-icon bg-warning">
-                                        <i class="far fa-file"></i>
-                                    </div>
-                                    <div class="card-wrap">
-                                        <div class="card-header">
-                                            <h4>Reports</h4>
-                                        </div>
-                                        <div class="card-body">
-                                            1,201
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-                                <div class="card card-statistic-1">
-                                    <div class="card-icon bg-success">
-                                        <i class="fas fa-circle"></i>
-                                    </div>
-                                    <div class="card-wrap">
-                                        <div class="card-header">
-                                            <h4>Online Users</h4>
-                                        </div>
-                                        <div class="card-body">
-                                            47
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    }
-
-                    @RenderBody()
-                </section>
-            </div>
-        </div>
+        }
+        else
+        {
+           @RenderBody()
+        }
     </div>
 
     <!-- General JS Scripts -->
