--- a/TestingApp/Views/Jurusan/Details.cshtml
+++ b/TestingApp/Views/Jurusan/Details.cshtml
@@ -18,7 +18,7 @@
 
                 <div>
                     <a href="@Url.Action("Index", "Jurusan")" class="btn btn-danger mx-2">Kembali</a>
-                    <button type="submit" class="btn btn-success">Simpan</button>
+                    <a href="@Url.Action("Edit", "Jurusan", new {id = ViewBag.Jrs.Id })" class="btn btn-success">Edit</a>
                 </div>
             </div>
         </div>
