--- a/TestingApp/Views/Shared/_NavBar.cshtml
+++ b/TestingApp/Views/Shared/_NavBar.cshtml
@@ -12,20 +12,29 @@
                 <img alt="image" src="~/Assets/img/Avatar/avatar-1.png" class="rounded-circle mr-1">
                 <div class="d-sm-none d-lg-inline-block">Hi, @Session["Name"]</div>
             </a>
+
             <div class="dropdown-menu dropdown-menu-right">
-                <div class="dropdown-title">@Session["Role"]</div>
+                <div class="dropdown-title">@Session["Role"].ToString()</div>
                 <a href="features-profile.html" class="dropdown-item has-icon">
-                    <i class="far fa-user"></i> Profile
+                    <i class="far fa-user"></i> 
+                    Profile
                 </a>
+
                 <a href="features-activities.html" class="dropdown-item has-icon">
-                    <i class="fas fa-bolt"></i> Activities
+                    <i class="fas fa-bolt"></i> 
+                    Activities
                 </a>
+
                 <a href="features-settings.html" class="dropdown-item has-icon">
-                    <i class="fas fa-cog"></i> Settings
+                    <i class="fas fa-cog"></i> 
+                    Settings
                 </a>
+
                 <div class="dropdown-divider"></div>
+
                 <a href="@Url.Action("Logout", "Authentication")" class="dropdown-item has-icon text-danger">
-                    <i class="fas fa-sign-out-alt"></i> Logout
+                    <i class="fas fa-sign-out-alt"></i> 
+                    Logout
                 </a>
             </div>
         </li>
