--- a/TestingApp/Views/Shared/_SideBar.cshtml
+++ b/TestingApp/Views/Shared/_SideBar.cshtml
@@ -15,20 +15,28 @@
                 </a>
             </li>
 
-            <li class="dropdown">
-                <a href="#" class="nav-link has-dropdown"><i class="far fa-file-alt"></i> <span>Master Data</span></a>
-                <ul class="dropdown-menu">
-                    <li><a class="nav-link" href="@Url.Action("Index", "Jurusan")">Jurusan</a></li>
-                    <li><a class="nav-link" href="@Url.Action("Index", "Student")">Mahasiswa</a></li>
-                </ul>
-            </li>
+            @{
+                if (Session["Role"].ToString() == "Admin")
+                {
+                    <li class="dropdown">
+                        <a href="#" class="nav-link has-dropdown"><i class="far fa-file-alt"></i> <span>Master Data</span></a>
+                        <ul class="dropdown-menu">
+                            <li><a class="nav-link" href="@Url.Action("Index", "Jurusan")">Jurusan</a></li>
+                            <li><a class="nav-link" href="@Url.Action("Index", "Student")">Mahasiswa</a></li>
+                        </ul>
+                    </li>
+                }
 
-            <li>
-                <a class="nav-link" href="#">
-                    <i class="fa fa-book"></i>
-                    <span>Matakuliah</span>
-                </a>
-            </li>
+                if (Session["Role"].ToString() == "User")
+                {
+                    <li>
+                        <a class="nav-link" href="#">
+                            <i class="fa fa-book"></i>
+                            <span>Matakuliah</span>
+                        </a>
+                    </li>
+                }
+            }
         </ul>
     </aside>
 </div>
